Fixed issues with dual-nav layout having the wrong padding in some situations on mobile viewports

--- a/app/assets/stylesheets/bootstrap-tweaks.scss
+++ b/app/assets/stylesheets/bootstrap-tweaks.scss
@@ -56,15 +56,18 @@ body {
 }
 
 /* Provide room for secondary-nav on small viewports and larger */
-@media (min-width: $screen-sm-min) {
-  .dual-nav {
-    #content-wrap { padding-top: $main-nav-height + $navbar-height; }
-    #mega-dropdown-wrap { top: $main-nav-height + $navbar-height; }
-    .page-wrapper {
-      margin-top: -$main-nav-height - $navbar-height;
-      padding-top: $main-nav-height + $navbar-height;
-    }
+@mixin fit-secondary-nav {
+  .offcanvas .inner-wrap,
+  #content-wrap { padding-top: $main-nav-height + $navbar-height; }
+  #mega-dropdown-wrap { top: $main-nav-height + $navbar-height; }
+  .page-wrapper {
+    margin-top: -$main-nav-height - $navbar-height;
+    padding-top: $main-nav-height + $navbar-height;
   }
+}
+.admin.dual-nav { @include fit-secondary-nav; }
+@media (min-width: $screen-sm-min) {
+  .dual-nav { @include fit-secondary-nav; }
 }
 
 
@@ -128,13 +131,15 @@ body {
 /* Use desktop margins and floats since main nav never collapses */
 #main-nav .navbar-left {
   float: left !important;
-  margin: 0 -15px;
+  margin-left: -15px;
+  margin-right: -15px;
 
   > li { float: left; }
 }
 #main-nav .navbar-right {
   float: right !important;
-  margin: 0 -15px;
+  margin-left: -15px;
+  margin-right: -15px;
 
   > li { float: left; }
 }
@@ -284,7 +289,9 @@ body {
     top: 5px;
     left: 0;
   }
-  .navbar-form {
+}
+@media (min-width: $screen-sm-min) {
+  #secondary-nav .navbar-form {
     min-width: 32em;
 
     .form-group, .form-control { width: 100%; }
@@ -1375,6 +1382,7 @@ fieldset > legend {
   margin-bottom: 40px;
   border: 0;
   border-radius: 0;
+  background-color: transparent;
 }
 .default-footer .bordered {
   border-left: 1px solid darken($footer-bg, 10%);
